Дз 3й урок(часть1)

--- a/project/page2.html
+++ b/project/page2.html
@@ -21,6 +21,7 @@
 
     <input type = "checkbox">
 
+
     <input type = "button" value="Нажми">
 
 
@@ -46,7 +47,9 @@
     <button type="button" class="btn btn-light">Light</button>
     <button type="button" class="btn btn-dark">Dark</button>
 
-<button type="button" class="btn btn-link">Link</button>
+    <button type="button" class="btn btn-link">Link</button>
+    <label for="001">Расскажите о себе</label>
+    <textarea id="001" name="test" autocomplete="on" rows="5" cols="33">Что угодно</textarea>
 
 </form>
 </html>
